# otls-tickettohide

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_all.sh  compile.sh  config.py  deploy_servers.sh  ech-ex.txt  ech-sites.txt  experiment.py  experiment_client.py  https.py  https_client.py  https_server.py  mpc_tls.py  mpc_trusted_party.py  proof_connections.py  proof_crypto.py  proof_spec.py  proof_spec_gen.py  prover.py  prover_crypto.py  requirements.txt  run_prover.py  run_verifier.py  setup.sh  spec.py  spec_gen.py  test_client_server.py  test_example.py  test_proof.py  test_specs.py  tls13_spec.py  tls13_spec_gen.py  tls_client.py  tls_common.py  tls_crypto.py  tls_ech.py  tls_keycalc.py  (+6 more)
benchmarks/: prover.sh  prover_benchmarks.sh  verifier.sh  verifier_benchmarks.sh
devel/: testing.py
scripts/: deploy_servers.sh  setup.sh
src/cipher/: hmac_sha256.h
src/cpp/: compile.sh
src/cpp/.github/workflows/: arm.yml  x86.yml
src/cpp/garblethenprove/: CMakeLists.txt
src/cpp/src/test/: CMakeLists.txt
src/cpp/tickettohide/: CMakeLists.txt  hmac_sha256_tth.h  prf_13.h  tickettohide.cpp  tth_utils.h
src/cpp/tickettohide/test/: aead_13.cpp  hmac_13.cpp
src/protocol/: aead.h  handshake.h  prove_aes.h
src/python/: config.py  setup.sh
src/python/testing/: test_proof.py
src/python/tickettohide/: mpc_tls.py  proof_common.py  proof_connections.py  proof_spec.py  proof_spec_gen.py  prover.py  prover_crypto.py  run_prover.py  run_verifier.py  verifier.py  verifier_crypto.py
src/python/tls13/: run_server.py  spec_gen.py  tls_client.py  tls_crypto.py  tls_ech.py  tls_records.py  util.py
test/: com_conv.cpp
testing/: test_proof.py  test_specs.py
tickettohide/: aead_13.h  aead_13_izk.h  constants.h  handshake_13.h  hmac_sha256_tth.h  hmac_test.cpp  mpc_tls.py  mpc_trusted_party.py  post_record_tth.h  prf_13.h  proof_connections.py  prover.py  run_prover.py  run_verifier.py  test_proof.py  tickettohide.cpp  tickettohide_test.cpp  tth_utils.h  verifier.py
tickettohide/test/: CMakeLists.txt  tth_hardcoded.cpp
tls13/: https_client.py  https_server.py  run_server.py  spec.py  test_client_server.py  test_example.py  test_server_secrets.txt  tls13_spec.py  tls13_spec_gen.py  tls_client.py  tls_ech.py  tls_keycalc.py  tls_records.py  tls_server.py
